<resources>
  <string name="app_name">PeakTracktion</string>

  <string name="navigation_drawer_open">Otvori navigaciju</string>
  <string name="navigation_drawer_close">Zatvori navigaciju</string>
  <string name="map">Mapa</string>
  <string name="places">Mesta</string>
  <string name="friends">Prijatelji</string>
  <string name="scoreboard">Rangiranja</string>
  <string name="settings">Podešavanja</string>
  <string name="about">O aplikaciji</string>

  <string name="location_permission_title">Upozorenje!</string>
  <string name="location_permission_text">Kako biste iskusili aplikaciju onako kako je i namenjena dozvolite aplikaciji da pristupi lokaciji uredjaja.</string>


  <string name="action_settings">Settings</string>

  <string name="hello_blank_fragment">Hello map fragment</string>
  <string name="title_activity_login">Prijava</string>

  <!--Place-->
  <string name="title_activity_edit_place">Azuriranje mesta</string>
  <string name="title_activity_new_place">Novo mesto</string>
  <string name="text_take_picture_place">Slikaj mesto</string>
  <string name="hint_name_place">Ime mesta</string>
  <string name="hint_description_place">Opis mesta</string>

  <string-array name="array_type_place">
    <item>Vrh</item>
    <item>Početak staze</item>
    <item>Kraj staze</item>
    <item>Upozorenje</item>
    <item>Odron</item>
    <item>Vidikovac</item>
    <item>Izvor</item>
  </string-array>
  <string name="text_hi">Zdravo i dobrodošao!</string>
  <string name="text_info">Da bi mogao da koristiš PeakTracktion aplikaciju, moraš biti prijavljen:</string>
  <string name="text_sign_in">Uloguj se</string>
  <string name="text_forgot_password">Zaboravio sam lozinku</string>
  <string name="text_register">Napravi nalog</string>
  <string name="hint_email">email</string>
  <string name="hint_password">lozinka</string>
  <string name="hint_phone">telefon</string>
  <string name="hint_full_name">puno ime</string>
  <string name="text_take_picture">slikaj se</string>
  <string name="hint_display_name">ime za prikaz</string>
  <string name="title_register">Registruj se</string>
  <string name="text_register_info">Kako bi se registrovao, potrebno je da popuniš sva polja i dodaš svoju sliku</string>
  <string name="text_register_user">Registruj se</string>
  <string name="text_save">Sačuvaj</string>
  <string name="text_discard">Odbaci</string>
  <string name="label_show_devices">Lista uređaja</string>
  <string name="tip">Tip: </string>
  <string name="save_place">Sačuvaj</string>
  <string name="dontsave_place">Otkaži</string>
</resources>
