<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <group
    android:id="@+id/group_actions"
    android:checkableBehavior="single">
    <item
      android:id="@+id/nav_map"
      android:checked="true"
      android:icon="@drawable/ic_map"
      android:title="@string/map" />
    <item
      android:id="@+id/nav_places"
      android:icon="@drawable/ic_place"
      android:title="@string/places" />
    <item
      android:id="@+id/nav_friends"
      android:icon="@drawable/ic_people"
      android:title="@string/friends" />
    <item
      android:id="@+id/nav_scoreboard"
      android:icon="@drawable/ic_scoreboard"
      android:title="@string/scoreboard" />
  </group>

  <group
    android:id="@+id/group_miscs"
    android:checkableBehavior="single">
    <item
      android:id="@+id/nav_settings"
      android:icon="@drawable/ic_settings"
      android:title="@string/settings" />
    <item
      android:id="@+id/nav_about"
      android:icon="@drawable/ic_info"
      android:title="@string/about" />
  </group>

</menu>
