<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center_horizontal"
  android:orientation="vertical"
  tools:context="rs.elfak.miksa_mladen.peaktracktion.activities.LoginActivity">

  <ProgressBar
    android:id="@+id/progress_auth"
    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:indeterminate="true"
    android:visibility="invisible" />

  <LinearLayout
    android:id="@+id/layout_info_text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/progress_auth"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingBottom="@dimen/activity_vertical_margin"
      android:text="@string/text_hi"
      android:textSize="14pt" />

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/text_info"
      android:textSize="10pt" />

  </LinearLayout>

  <LinearLayout
    android:id="@+id/layout_buttons"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/layout_info_text"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <EditText
      android:id="@+id/et_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/hint_email"
      android:inputType="textEmailAddress"
      android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <EditText
      android:id="@+id/et_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/hint_password"
      android:inputType="textPassword"
      android:layout_marginBottom="@dimen/activity_vertical_margin" />

    <Button
      android:id="@+id/button_sign_in"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="@style/Widget.AppCompat.Button.Colored"
      android:text="@string/text_sign_in" />

    <LinearLayout
      android:id="@+id/layout_auth_misc"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_gravity="fill_horizontal">

      <Button
        android:id="@+id/button_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/text_forgot_password"
        style="@style/Widget.AppCompat.Button.Borderless"/>

      <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/text_register"
        style="@style/Widget.AppCompat.Button"/>

    </LinearLayout>



  </LinearLayout>

</RelativeLayout>
